test/arrays/iterations/iterModConstArr3.good
iterModConstArr3.chpl:4: error: illegal lvalue in assignment
